--- a/pom.xml
+++ b/pom.xml
@@ -442,7 +442,7 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>${assembly.mvn.plugin.version}</version>
                     <configuration>
-                        <tarLongFileMode>gnu</tarLongFileMode>
+                        <tarLongFileMode>posix</tarLongFileMode>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -2120,6 +2120,7 @@
         <source.mvn.plugin.version>3.2.1</source.mvn.plugin.version>
         <surefire.mvn.plugin.version>3.0.0-M7</surefire.mvn.plugin.version>
         <war.mvn.plugin.version>3.3.2</war.mvn.plugin.version>
+        <wiremock.mvn.plugin.version>2.9.0</wiremock.mvn.plugin.version>
         <xml.mvn.plugin.version>1.0.2</xml.mvn.plugin.version>
         <!-- END of Versions of Maven plugins -->
 
@@ -2182,7 +2183,6 @@
         <!--<weld.version>2.2.14.Final</weld.version>--> <!-- 2.4.1 doesn't work - bv tests -->
         <weld3.version>3.1.9.Final</weld3.version>
         <wiremock.version>2.27.2</wiremock.version>
-        <wiremock.maven.plugin.version>2.9.0</wiremock.maven.plugin.version>
         <xerces.version>2.12.2</xerces.version>
 
         <!-- Graal VM       -->
