--- a/pom.xml
+++ b/pom.xml
@@ -1813,11 +1813,6 @@
 
             <!-- HV OSGi dependencies. -->
             <dependency>
-                <groupId>org.jboss.logging</groupId>
-                <artifactId>jboss-logging</artifactId>
-                <version>${jboss.logging.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.fasterxml</groupId>
                 <artifactId>classmate</artifactId>
                 <version>${fasterxml.classmate.version}</version>
@@ -2141,6 +2136,7 @@
         <findbugs.glassfish.version>1.7</findbugs.glassfish.version>
         <freemarker.version>2.3.31</freemarker.version>
         <gae.version>1.9.98</gae.version>
+        <groovy.version>4.0.0-alpha-3</groovy.version>
         <gson.version>2.9.0</gson.version>
         <guava.version>31.1-jre</guava.version>
         <hamcrest.version>2.2</hamcrest.version>
@@ -2151,7 +2147,6 @@
         <jackson.version>2.13.3</jackson.version>
         <jackson1.version>1.9.13</jackson1.version>
         <javassist.version>3.29.0-GA</javassist.version>
-        <jboss.logging.version>3.5.0.Final</jboss.logging.version>
         <jersey1.version>1.19.3</jersey1.version>
         <jersey1.last.final.version>${jersey1.version}</jersey1.last.final.version>
         <jettison.version>1.3.7</jettison.version> <!-- TODO: 1.3.8 doesn't work; AbstractJsonTest complexBeanWithAttributes -->
@@ -2179,7 +2174,7 @@
         <spring5.version>5.3.22</spring5.version>
         <testng.version>7.6.1</testng.version>
         <testng6.version>6.9.13.6</testng6.version>
-        <validation.impl.version>6.2.3.Final</validation.impl.version>
+        <validation.impl.version>6.2.4.Final</validation.impl.version>
         <!--<weld.version>2.2.14.Final</weld.version>--> <!-- 2.4.1 doesn't work - bv tests -->
         <weld3.version>3.1.9.Final</weld3.version>
         <wiremock.version>2.27.2</wiremock.version>
