--- a/tests/e2e-client/pom.xml
+++ b/tests/e2e-client/pom.xml
@@ -195,6 +195,12 @@
             <version>${junit-platform-suite.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
+        </dependency>
     </dependencies>
 
     <profiles>
