--- a/pom.xml
+++ b/pom.xml
@@ -2167,7 +2167,7 @@
         <fasterxml.classmate.version>1.3.3</fasterxml.classmate.version>
         <findbugs.glassfish.version>1.7</findbugs.glassfish.version>
         <findbugs.version>3.0.4</findbugs.version>
-        <freemarker.version>2.3.27-incubating</freemarker.version>
+        <freemarker.version>2.3.32</freemarker.version>
         <gae.version>1.9.59</gae.version>
         <grizzly.client.version>1.16</grizzly.client.version>
         <enforcer.version>3.1.0</enforcer.version>
